# task-sequencer

./: .env  .env.example  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml  start.sh
backend/: CLAUDE.md  main.py  pyproject.toml
backend/ai_providers/: CLAUDE.md  __init__.py  base.py  claude_adapter.py  gemini_adapter.py  openai_adapter.py  router.py
backend/ai_workflow_platform.egg-info/: SOURCES.txt  requires.txt  top_level.txt
backend/app/: CLAUDE.md
backend/app/api/: CLAUDE.md
backend/app/core/: CLAUDE.md  config.py  database.py  encryption.py  security.py
backend/app/models/: CLAUDE.md  __init__.py  api_key.py  base.py  conversation.py  enums.py  folder.py  prompt.py  prompt_version.py  task.py  task_execution.py  task_version.py  team.py  team_member.py  user.py
backend/app/schemas/: CLAUDE.md  __init__.py  api_key.py  conversation.py  folder.py  prompt.py  prompt_version.py  task.py  task_execution.py  task_version.py  team.py  user.py
backend/app/services/: CLAUDE.md  audit.py  email.py  notification_prefs.py  notifications.py  permissions.py
backend/app/worker/: CLAUDE.md  executor.py  jobs.py  locks.py  main.py  queue.py  retry_scheduler.py
backend/migrations/: CLAUDE.md  env.py
backend/migrations/versions/: 0001_initial.py  0002_add_audit_log.py  0003_inline_steps_and_error_message.py
backend/tests/: CLAUDE.md  conftest.py  test_ai_providers.py  test_models.py  test_notifications.py
backend/tests/test_api/: CLAUDE.md  conftest.py  test_api_keys.py  test_auth.py  test_folders.py  test_prompts.py  test_search.py  test_tasks.py  (+1 more)
(+76 files in other folders)
