[project]
name = "ai-workflow-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg",
  "alembic",
  "pydantic[email]>=2.0",
  "pydantic-settings",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "cryptography",
  "redis[asyncio]",
  "apscheduler",
  "openai",
  "anthropic",
  "google-generativeai",
  "sendgrid",
  "aiosmtplib",
  "jinja2",
  "httpx",
  "python-multipart",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx",
  "fakeredis",
  "ruff",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ai_providers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
